@@ -101,6 +101,30 @@ Function Get-Java-Opts {
 	return $JAVA_OPTS
 }
 
+Function Get-Default-Modular-Jvm-Options {
+Param(
+   [Parameter(Mandatory=$true)]
+   [string[]]$opts
+
+) #end param
+
+	$DEFAULT_MODULAR_JVM_OPTIONS = ""
+	& $JAVA --add-modules=java.se -version 2> $nul
+	if ($LASTEXITCODE -eq 0) {
+		for($i=0; $i -lt $opts.Count; $i++){
+			$arg = $Params[$i]
+			if ($arg -contains "--add-modules") {
+				return $DEFAULT_MODULAR_JVM_OPTIONS
+			}
+		}
+		$DEFAULT_MODULAR_JVM_OPTIONS += "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED"
+		$DEFAULT_MODULAR_JVM_OPTIONS += "--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED"
+		$DEFAULT_MODULAR_JVM_OPTIONS += "--add-exports=jdk.unsupported/sun.reflect=ALL-UNNAMED"
+		$DEFAULT_MODULAR_JVM_OPTIONS += "--add-modules=java.se"
+	}
+	return $DEFAULT_MODULAR_JVM_OPTIONS
+}
+
 Function Display-Array($array){
 	for ($i=0; $i -lt $array.length; $i++) {
 		$v =  "$i " + $array[$i]
@@ -120,10 +144,14 @@ Param(
 
 ) #end param
   $JAVA_OPTS = Get-Java-Opts #takes care of looking at defind settings and/or using env:JAVA_OPTS
+  $DEFAULT_MODULAR_JVM_OPTS = Get-Default-Modular-Jvm-Options -opts $JAVA_OPTS
 
   $PROG_ARGS = @()
   if ($JAVA_OPTS -ne $null){
   	$PROG_ARGS += $JAVA_OPTS
+  }
+  if ($DEFAULT_MODULAR_JVM_OPTS -ne $null){
+  	$PROG_ARGS += $DEFAULT_MODULAR_JVM_OPTS
   }
   if ($logFile){
   	$PROG_ARGS += "-Dorg.jboss.boot.log.file=$logFile"
@@ -151,6 +179,7 @@ Param(
         $PROG_ARGS += "-Xloggc:$JBOSS_LOG_DIR\gc.log"
     }
   }
+
   $global:FINAL_JAVA_OPTS = $PROG_ARGS
 
   $PROG_ARGS += "-jar"
